# retro-sync

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .replit  BOOTSTRAP_STRATEGY.md  Cargo.toml  Makefile  NIX_SETUP.md  README.md  SECURITY.md  SECURITY_AUDIT_CORRECTED.md  deny.toml  flake.nix  index.html  package-lock.json  package.json  replit.md  retro-sync.toml
.github/workflows/: ci.yml  deploy.yml
apps/api-server/: Cargo.toml
apps/web-client/: index.html  vite.config.ts
backend/: Cargo.toml
backend/src/: audio_qc.rs  auth.rs  btfs.rs  bttc.rs  ddex.rs  dsp.rs  fraud.rs  gtms.rs  identifiers.rs  iso_store.rs  kyc.rs  ledger.rs  main.rs  metrics.rs  mirrors.rs  moderation.rs  privacy.rs  royalty_reporting.rs  sap.rs  takedown.rs  wikidata.rs  xslt.rs  zk_cache.rs
contracts/: foundry.toml
docs/: ceremony.md  index.html
fixtures/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  actually responding:  index.html
frontend/src/: lib.rs
scripts/: pentest.sh  shamash-tiles.sh  shamash_encode.py
shards/: README.md  backend_src_audio_qc.rs.el.cbor  backend_src_auth.rs.el.cbor  backend_src_btfs.rs.el.cbor  backend_src_bttc.rs.el.cbor  backend_src_ddex.rs.el.cbor  backend_src_dsp.rs.el.cbor  backend_src_fraud.rs.el.cbor  backend_src_gtms.rs.el.cbor  backend_src_identifiers.rs.el.cbor  backend_src_iso_store.rs.el.cbor  backend_src_kyc.rs.el.cbor  backend_src_ledger.rs.el.cbor  backend_src_main.rs.el.cbor  backend_src_metrics.rs.el.cbor  backend_src_mirrors.rs.el.cbor  backend_src_moderation.rs.el.cbor  backend_src_privacy.rs.el.cbor  backend_src_royalty_reporting.rs.el.cbor  backend_src_sap.rs.el.cbor  backend_src_shard.rs.el.cbor  backend_src_takedown.rs.el.cbor  backend_src_wikidata.rs.el.cbor  backend_src_xslt.rs.el.cbor  backend_src_zk_cache.rs.el.cbor  frontend_src_lib.rs.el.cbor  shared_src_alphabet.rs.el.cbor  shared_src_identifiers.rs.el.cbor  shared_src_lib.rs.el.cbor  shared_src_master_pattern.rs.el.cbor  shared_src_parsers.rs.el.cbor  shared_src_types.rs.el.cbor  tools_btfs-keygen_src_main.rs.el.cbor  tools_ceremony_src_main.rs.el.cbor  tools_font_check_src_main.rs.el.cbor  zk_circuits_src_lib.rs.el.cbor  zk_circuits_src_royalty_split.rs.el.cbor
src/: lib.rs
tools/: upload_hf.py  verify_roundtrip.py  verify_stego.py
tools/btfs-keygen/: Cargo.toml
tools/btfs-keygen/src/: main.rs
tools/ceremony/: Cargo.toml
tools/ceremony/src/: main.rs
zk_circuits/: Cargo.toml
(+107 files in other folders)
