[package]
name    = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest      = { workspace = true }
chrono       = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
heed         = { workspace = true }
shared       = { path = "../shared" }
zk_circuits  = { path = "../zk_circuits" }
ethers           = { version = "2", features = ["ledger", "abigen", "ws"] }
ethers-signers   = { version = "2", features = ["ledger"] }
ethers-contract  = { version = "2" }
quick-xml    = { workspace = true }
xot          = { workspace = true }
