[package]
name    = "btfs-keygen"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "btfs-keygen"
path = "src/main.rs"

[dependencies]
# Ledger HID signing
ethers         = { version = "2", features = ["ledger"] }
ethers-signers = { version = "2", features = ["ledger"] }
# Ed25519 keypair
ed25519-dalek  = { version = "2", features = ["rand_core"] }
# libp2p peer ID encoding
bs58           = "0.5"
# Protobuf encoding for libp2p key format
prost          = "0.12"
# SHA-256 for seed stretching
sha2           = { version = "0.10", features = [] }
# Base64 for BTFS config format
base64         = "0.22"
# Async runtime
tokio          = { version = "1", features = ["full"] }
# Error handling
anyhow         = "1"
# Serialisation
serde_json     = "1"
