[package]
name    = "ceremony"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ceremony"
path = "src/main.rs"

[dependencies]
ark-std       = "0.4"
ark-ff        = "0.4"
ark-ec        = "0.4"
ark-bn254     = "0.4"
ark-groth16   = "0.4"
ark-relations = "0.4"
ark-r1cs-std  = "0.4"
ark-serialize = "0.4"
ark-snark     = "0.4"
serde_json    = "1"
hex           = "0.4"
chrono        = { version = "0.4", features = ["serde"] }
anyhow        = "1"
